--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -67,7 +67,6 @@
       align-self: start;
       // background-color: var(--color-on-primary);
       padding: 0 0.5rem;
-      height: 40px;
       border-radius: 1rem;
       width: 50%;
       align-self: flex-end;
@@ -85,7 +84,7 @@
 
   @media screen and (max-width: 640px) {
     .top {
-      align-items: start;
+     flex-direction: column-reverse;
       gap: $gap-medium;
 
       .left {
@@ -115,61 +114,72 @@
       }
       .right {
         margin: 1rem 0 1.5rem 0;
+        align-self: flex-start;
       }
     }
   }
-  @include media-small {
+
+  @media screen and (max-width: 350px) {
     .top {
-      .left {
-        gap: $gap-small;
+       .right {
+        // display: flex;
         flex-direction: column;
+        width: auto;
       }
     }
   }
 }
 
-.card-header.long-header {
-  @media screen and (min-width: 800px) and (max-width: 1400px),
-    (max-width: 600px) {
-    .top {
-      flex-direction: column-reverse;
-      align-items: start;
-      gap: $gap-medium;
-      .left {
-        flex-direction: column;
-        // margin-bottom: 2rem;
-        .title {
-          span {
-            font-size: 24px;
-          }
-          .material-symbols-outlined {
-            font-size: 23px;
-          }
-          .debit-number {
-            font-size: 16px;
-            margin-top: 0;
-          }
-        }
+// .card-header.long-header {
+//   @media screen and (min-width: 800px) and (max-width: 1400px),
+//     (max-width: 600px) {
+//     .top {
+//       flex-direction: column-reverse;
+//       align-items: start;
+//       gap: $gap-medium;
+//       .left {
+//         flex-direction: column;
+//         // margin-bottom: 2rem;
+//         .title {
+//           span {
+//             font-size: 24px;
+//           }
+//           .material-symbols-outlined {
+//             font-size: 23px;
+//           }
+//           .debit-number {
+//             font-size: 16px;
+//             margin-top: 0;
+//           }
+//         }
 
-        .medium-title {
-          span {
-            font-size: 25px;
-          }
-        }
+//         .medium-title {
+//           span {
+//             font-size: 25px;
+//           }
+//         }
 
-        .small-title {
-          span {
-            font-size: 20px;
-          }
-        }
-      }
-      .right {
-        margin: 0 0 1.5rem 0;
-        align-self: flex-end;
-      }
-    }
-  }
-}
+//         .small-title {
+//           span {
+//             font-size: 20px;
+//           }
+//         }
+//       }
+//       .right {
+//         margin: 0 0 1.5rem 0;
+//         align-self: flex-end;
+//       }
+//     }
+//   }
+// }
+
+// @media screen and (max-width: 850px) {
+//   .right {
+//     width: 100% !important;
+//   }
+// }
+
+
 
 .card-header.mail-header {
   padding-bottom: 0;
@@ -197,10 +207,5 @@
         flex-direction: column;
       }
     }
-  }
-}
-@media screen and (max-width: 850px) {
-  .right {
-    width: 100% !important;
   }
 }
