--- a/sass/_edit-mode.scss
+++ b/sass/_edit-mode.scss
@@ -21,12 +21,12 @@
     border-radius: 8px;
     padding: 10px;
     top: 100%;
-    margin: 0.5rem;
+    // margin: 0.5rem;
     z-index: 100;
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    width: 350px;
+    width: 100%;
 
     &__header {
       display: flex;
@@ -232,11 +232,11 @@
   }
 }
 
-.edit-content.small {
-  min-width: 120px;
-  // max-width: 100%;
-  max-width: 120px;
-}
+// .edit-content.small {
+//   min-width: 120px;
+//   // max-width: 100%;
+//   max-width: 120px;
+// }
 .edit-content.medium {
   min-width: 140px;
   max-width: 100%;
