--- a/sass/_edit-mode.scss
+++ b/sass/_edit-mode.scss
@@ -308,7 +308,7 @@
   .edit-content.no-padding,
   .edit-content.di-co {
     width: 100%;
-    min-width: 180px;
+    // min-width: 180px;
   }
 }
 
