--- a/sass/_edit-mode.scss
+++ b/sass/_edit-mode.scss
@@ -175,7 +175,7 @@
   background-color: #e0e2ec;
 }
 // .edit-content.green:hover:not(.focus-content) {
-//   background-color: green;
+//   background-color: rgb(168, 231, 168);
 // }
 
 .focus-content {
