--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -100,12 +100,12 @@
           }
         }
         .edit-content.transparent {
-          .edit-field {
-            background-color: transparent;
+          // .edit-field {
+          //   background-color: transparent;
             .value-text {
               color: #877D4B;
             }
-          }
+          // }
         }
         .focus-content {
           background-color: #E0E2EC;
