--- a/sass/_edit-mode.scss
+++ b/sass/_edit-mode.scss
@@ -5,7 +5,7 @@
   justify-content: space-between;
 
   border-radius: $border-radius-small;
-  padding: $padding-xsmall;
+  padding: 0 $padding-xsmall;
   gap: $gap-small;
   // border: 1px solid var(--color-on-primary);
   width: 200px;
