--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -100,12 +100,18 @@
           }
         }
         .edit-content.transparent {
-          // .edit-field {
-          //   background-color: transparent;
+          border: 1px solid rgba(135, 125, 74, 0.361);
+          .edit-field {
+            background-color: transparent;
+            border: none;
+
             .value-text {
               color: #877D4B;
             }
-          // }
+          }
+        }
+        .edit-content:hover {
+          background-color: transparent;
         }
         .focus-content {
           background-color: #E0E2EC;
