--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -2988,18 +2988,28 @@ textarea {
 }
 .card-header .top .right .header-fields .edit-content.green .edit-field {
   background-color: #b8e4c1;
+  border-color: transparent;
 }
 .card-header .top .right .header-fields .edit-content.green .edit-field .value-text {
   color: #0B3A0F;
 }
 .card-header .top .right .header-fields .edit-content.red .edit-field {
   background-color: #FEE3E2;
+  border-color: transparent;
 }
 .card-header .top .right .header-fields .edit-content.red .edit-field .value-text {
   color: #913239;
 }
+.card-header .top .right .header-fields .edit-content.blue .edit-field {
+  background-color: transparent;
+  border: 1px solid rgba(0, 100, 147, 0.4117647059);
+}
+.card-header .top .right .header-fields .edit-content.blue .edit-field .value-text {
+  color: var(--color-primary);
+}
 .card-header .top .right .header-fields .edit-content.yellow .edit-field {
   background-color: #FBF3CB;
+  border-color: transparent;
 }
 .card-header .top .right .header-fields .edit-content.yellow .edit-field .value-text {
   color: #877D4B;
