--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -2386,7 +2386,7 @@ textarea {
   align-items: center;
   justify-content: space-between;
   border-radius: 0.5rem;
-  padding: 0 0.2rem;
+  padding: 0.2rem 0.2rem;
   gap: 0.5rem;
   width: 200px;
   transition: all 0.2s ease-in-out;
