--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -66,14 +66,15 @@
       .header-fields {
         display: flex;
         gap: $gap-small;
-      flex-wrap: wrap;
-      align-items: center;
-      .add-circle {
-        opacity: 0;
-      }
+        flex-wrap: wrap;
+        align-items: center;
+        .add-circle {
+          opacity: 0;
+        }
 
         .edit-content {
           width: fit-content;
+          height: 35px;
         }
         .edit-content.green {
           .edit-field {
@@ -81,13 +82,13 @@
             border-color: transparent;
 
             .value-text {
-              color: #0B3A0F;
+              color: #0b3a0f;
             }
           }
         }
         .edit-content.red {
           .edit-field {
-            background-color: #FEE3E2;
+            background-color: #fee3e2;
             border-color: transparent;
             .value-text {
               color: #913239;
@@ -105,10 +106,10 @@
         }
         .edit-content.yellow {
           .edit-field {
-            background-color: #FBF3CB;
-            border-color: transparent;;
+            background-color: #fbf3cb;
+            border-color: transparent;
             .value-text {
-              color: #877D4B;
+              color: #877d4b;
             }
           }
         }
@@ -119,7 +120,7 @@
             border: none;
 
             .value-text {
-              color: #877D4B;
+              color: #877d4b;
             }
           }
         }
@@ -138,7 +139,7 @@
           background-color: transparent;
         }
         .focus-content {
-          background-color: #E0E2EC;
+          background-color: #e0e2ec;
           .label {
             color: var(--color-on-primary);
           }
@@ -146,14 +147,12 @@
       }
       .header-fields:hover {
         .add-circle {
-          opacity: .8;
+          opacity: 0.8;
         }
       }
       .add-circle.touchscreen {
         opacity: 0.8;
       }
-   
-      
     }
   }
 
@@ -163,7 +162,7 @@
 
   @media screen and (max-width: 640px) {
     .top {
-     flex-direction: column-reverse;
+      flex-direction: column-reverse;
       gap: $gap-medium;
 
       .left {
@@ -200,15 +199,12 @@
 
   @media screen and (max-width: 350px) {
     .top {
-       .right {
+      .right {
         width: auto;
       }
     }
   }
 }
-
-
-
 
 .card-header.mail-header {
   padding-bottom: 0;
