--- a/sass/_edit-mode.scss
+++ b/sass/_edit-mode.scss
@@ -27,6 +27,7 @@
     flex-direction: column;
     gap: 1rem;
     width: 100%;
+    margin-top: 0.5rem;
 
     &__header {
       display: flex;
@@ -105,21 +106,21 @@
     }
   }
 
-  .edit-content-menu-up {
-    position: absolute;
-    border-radius: 0.5rem;
-    padding: 0.2rem 0.7rem;
-    top: 100%;
-    margin-top: 0.5rem;
-    z-index: 1000;
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    border: 1px solid rgba(102, 102, 100, 0.361);
-    left: 0;
-    display: flex;
-    background-color: var(--color-bg);
-  }
+  // .edit-content-menu-up {
+  //   position: absolute;
+  //   border-radius: 0.5rem;
+  //   padding: 0.2rem 0.7rem;
+  //   top: 100%;
+  //   margin-top: 0.5rem;
+  //   z-index: 1000;
+  //   display: flex;
+  //   flex-direction: column;
+  //   width: 100%;
+  //   border: 1px solid rgba(102, 102, 100, 0.361);
+  //   left: 0;
+  //   display: flex;
+  //   background-color: var(--color-bg);
+  // }
   .material-symbols-outlined {
     opacity: 0.7;
   }
