--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -62,6 +62,7 @@
       gap: 1.5rem;
       font-size: font-size(font-size-regular);
       flex-wrap: wrap;
+      margin-bottom: 1rem;
 
       .header-fields {
         display: flex;
