--- a/sass/_1.variables.scss
+++ b/sass/_1.variables.scss
@@ -45,6 +45,7 @@ html[data-theme="blue"] {
   --color-green-lighter-hover: #78e798;
   --color-on-green-lighter: #213b07;
   --color-green-chat: #fafad4;
+  --color-green-kanban: #b8e4c1;
 
   --color-red: #ffb4ab;
   --color-on-red: #690005;
@@ -103,6 +104,7 @@ html[data-theme="dark-blue"] {
   --color-green-lighter-hover: #2d4c0d;
   --color-on-green-lighter: #8cf9ab;
   --color-green-chat: #005c4b;
+  --color-green-kanban: #406749;
 
   --color-red: #690005;
   --color-on-red: #ffb4ab;
