--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -37,6 +37,7 @@
           align-items: center;
           flex-wrap: wrap;
           width: 170px;
+          position: relative;
           a {
           display: flex;
           align-items: center;
@@ -48,8 +49,45 @@
             font-size: font-size(font-size-large);
             color: var(--color-on-primary-light);
           }
+
         }
 
+        
+        .sidebar-menu {
+          position: fixed;
+          background-color: var(--color-on-primary);
+          box-shadow: 0 24px 38px 3px rgba(0, 0, 0, 0.14), 0 9px 46px 8px rgba(0, 0, 0, 0.12), 0 11px 15px -7px rgba(0, 0, 0, 0.2);
+          border-radius: 8px;
+          padding: 10px;
+          right: 180px;
+          z-index: 100;
+          display: flex;
+          flex-direction: column;
+          gap: 1rem;
+          margin-top: 0.5rem;
+          // height: 200px;
+          // width: 400px;
+          display: flex;
+          .group {
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            .group-name {
+                font-size: font-size(font-size-regular);
+                align-self: flex-start;
+                margin-right: .5rem;
+            }
+            .group-fields {
+              display: flex;
+              align-items: center;
+              gap: .5rem;
+              .edit-content {
+                max-width: 100px;
+              }
+            }
+          }
+        }
+        
         &--collapse {
           display: flex;
           flex-direction: column;
