--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -37,6 +37,7 @@ html[data-theme=blue] {
   --color-green-lighter-hover: #78e798;
   --color-on-green-lighter: #213b07;
   --color-green-chat: #fafad4;
+  --color-green-kanban: #b8e4c1;
   --color-red: #ffb4ab;
   --color-on-red: #690005;
   --color-red-light: #ffdad6;
@@ -86,6 +87,7 @@ html[data-theme=dark-blue] {
   --color-green-lighter-hover: #2d4c0d;
   --color-on-green-lighter: #8cf9ab;
   --color-green-chat: #005c4b;
+  --color-green-kanban: #406749;
   --color-red: #690005;
   --color-on-red: #ffb4ab;
   --color-red-light: #2d1516;
@@ -629,6 +631,7 @@ hr {
   align-items: center;
   flex-wrap: wrap;
   width: 170px;
+  position: relative;
 }
 .side-nav__content--list__item .item-name a {
   display: flex;
@@ -639,6 +642,38 @@ hr {
 .side-nav__content--list__item .item-name span {
   font-size: 2rem;
   color: var(--color-on-primary-light);
+}
+.side-nav__content--list__item .sidebar-menu {
+  position: fixed;
+  background-color: var(--color-on-primary);
+  box-shadow: 0 24px 38px 3px rgba(0, 0, 0, 0.14), 0 9px 46px 8px rgba(0, 0, 0, 0.12), 0 11px 15px -7px rgba(0, 0, 0, 0.2);
+  border-radius: 8px;
+  padding: 10px;
+  right: 180px;
+  z-index: 100;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-top: 0.5rem;
+  display: flex;
+}
+.side-nav__content--list__item .sidebar-menu .group {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.side-nav__content--list__item .sidebar-menu .group .group-name {
+  font-size: 1.25rem;
+  align-self: flex-start;
+  margin-right: 0.5rem;
+}
+.side-nav__content--list__item .sidebar-menu .group .group-fields {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+.side-nav__content--list__item .sidebar-menu .group .group-fields .edit-content {
+  max-width: 100px;
 }
 .side-nav__content--list__item--collapse {
   display: flex;
@@ -2990,11 +3025,12 @@ textarea {
   height: 35px;
 }
 .card-header .top .right .header-fields .edit-content.green .edit-field {
-  background-color: #b8e4c1;
+  background-color: var(--color-green-kanban);
   border-color: transparent;
 }
 .card-header .top .right .header-fields .edit-content.green .edit-field .value-text {
   color: #0b3a0f;
+  color: var(--color-on-primary-light);
 }
 .card-header .top .right .header-fields .edit-content.red .edit-field {
   background-color: #fee3e2;
